htdocs/t/cocktail.css
.b-title { width: 100%; }
.b-title h1 { position: relative; }
.b-title h1,
.b-title .hrefs { z-index: 10; }

.b-content .viewport{height:560px;overflow:hidden;position:relative;}
.b-content .surface{padding:500px;width:10000px;}

.b-more dt{background-position: 0 -20px;}
.b-more dt b{background-position: 0 -19px;}

#author,
#where-to-taste { display: none; position: relative; z-index: 5;  }

a.author { text-decoration: none; color: inherit; cursor: default; }
a.author.active { border-bottom: 1px dashed; cursor: pointer; }

.body-wrapper { overflow: hidden; }

.b-content .top-menu{background:url(bg/cocktail/bgs.png) repeat-x 0 0;position:relative;}
.b-content .top-menu #poster{position:absolute;bottom:0;left:0;}
.b-content .top-menu p{padding:10px 0 8px 9px;height:20px;overflow:hidden;margin-bottom:142px;font-size:110%;position:relative;}

.border-links a { display: block; text-decoration: none; float: left; height: 1.64em; line-height: 1.5; padding: 1px 0; color: #fff; margin-right: 12px; }
.border-links a b { height: 1.64em; display: block; border: 0 solid transparent; border-width: 0 1px; position: relative; top: 1px; padding: 0 11px; margin: -1px; }
.border-links a.now, .border-links a.selected, .border-links a:hover { background: #0392f1; }
.border-links a.now b, .border-links a.selected b, .border-links a:hover b { border-color: #0392f1; }
.border-links a:hover { text-decoration:none}

.hreview{background:url(bg/cocktail/bgs.png) repeat-x 0 100%;}
.hreview .entry{padding:21px 16px 32px 218px;position:relative;}
.hreview .desc{font-size:120%;overflow:hidden;line-height:1.25;}
.hreview .desc h2{position:relative;font-size:14px;font-weight:bold;padding:0 0 12px 16px;}
.hreview .desc h2 i { position: absolute; left: -5px; top: 4px; width: 16px; height: 10px; background-position: -420px -25px; }
.hreview .desc .description{padding-left:16px;}
.hreview .tags{font-size:110%;padding:29px 0 38px 0;}
.hreview button { margin-right: 16px; }
.illustration{ position:absolute; left:-2px; bottom:-9px;} /* also applied to the dragged element */ 

#view-prepare{display:none;position:absolute;min-height:100%;top:0;left:0;font-size:120%;line-height:1.5;width:93%;padding:0 3.5%;}
#view-prepare h3{font-size:150%;margin:13px 0 10px;}
#view-prepare button{display:block;margin:2em auto;}
#view-how{display:none;position:absolute;top:-139px;padding-top:139px;left:0;width:100%;height:100%;}
#view-how .ingredients{background:url(bg/cocktail/how-bg.png) repeat-x 0 0;height:139px;margin-top:-140px;padding:0 1px;}
#view-how .ingredients .wrap{background:url(bg/cocktail/how-bg.png) repeat-x 0 0;height:140px;position:relative;}
#view-how .ingredients .viewport{position:absolute;bottom:0;left:170px;width:360px;height:120px;}
#view-how .ingredients .surface{width:5000px;height:120px;}
#view-how .ingredients .surface img{float:left;margin-left:20px; cursor:pointer;}
#view-how .ingredients .point{width:360px;height:120px;float:left;}
#view-how .next,
#view-how .prev{z-index:3;position:absolute;left:auto;right:19px;}
#view-how .prev{top:72px;}
#view-how .next{top:48px;}

#view-how .recipe,
#view-how .controls { margin-left: 200px; }
#view-how .recipe { font-size:120%; }
#view-how .recipe ul { line-height: 1.5; margin-left: 1.5em; }
#view-how .recipe ul li { list-style: decimal; }
#view-how .recipe dt { font-size:150%;padding:17px 0 11px 0; }
#view-how .controls { margin-top: 30px; }
#view-how .controls li { display: inline; }


.view-how#main-content *{visibility:hidden;}
.view-how#main-content .illustration{visibility:visible;z-index:2;}

.what-need{overflow:hidden;font-size:120%;padding-top:27px;margin-bottom:27px;}
.what-need dl{float:left;width:23em;margin-bottom:-1px;}
.what-need .tools{float:right;}
.what-need dt{border-bottom:3px solid #5c5c5c;font-weight:bold;margin-bottom:10px;padding-bottom:6px;}
.what-need dd{color:#343b40;line-height:2.3;background:url(bg/body/hr-repeat.png) repeat-x 0 100%;height:2.5em;}
.what-need dd:last-child{background:none;}
.what-need dd a{float:left;padding-right:18px;}
.what-need strong{font-weight:normal;display:block;float:right;width:25%;}

<!--# include virtual="popup.css" -->
<!--# include virtual="info-popup.css" -->

#barman-info-popup { display: none; }

<!--# if expr="$HTTP_USER_AGENT = /MSIE [678]\./" -->
.hreview .menu p a{zoom:1;padding-top:1px;padding-bottom:1px;position:relative;}
.hreview .menu p a b{position:relative;border:0;display:inline;top:1px;zoom:1;left:-1px;}
.hreview .menu p a.now b,
.hreview .menu p a:hover b{background:#0392f1;}
<!--# endif -->


<!--# if expr="$HTTP_USER_AGENT = /MSIE 6\./" -->
.hreview,
.hreview .menu p a,
.hreview .menu p {zoom:1}

#poster,
.hreview .entry .illustration {scrollbar-base-color:expression((runtimeStyle.scrollbarBaseColor="transparent")&&(offsetWidth?(runtimeStyle.width=offsetWidth+'px'):1)&&(offsetHeight?(runtimeStyle.height=offsetHeight+'px'):1)&&(runtimeStyle.filter=(runtimeStyle.filter?runtimeStyle.filter+';':'')+'progid:DXImageTransform.Microsoft.AlphaImageLoader(src="'+src+'",sizingMethod="image")')&&(src='/t/0.png'));}

.b-content{width:590px;}
.hreview .top-menu .b{width:100%;height:182px;overflow:hidden;}

.b-content .entry{width:100%;/*background:green;*/}
.hreview .desc{width:365px;}
.hreview .desc h2 i { left: -20px; }
.hreview button{float:left;}

#view-prepare button{bottom:-50px;}

#panel_cocktail{/*z-index:20;position:absolute;*/ width:90%;}
#panel_cocktail a{width:1px;white-space:nowrap;}
#panel_cocktail a b{border:none;}

#poster{position:absolute;top:-28px;}
<!--# endif -->

<!--# if expr="$HTTP_USER_AGENT = /MSIE 7\./" -->
.hreview button.bt-view-how{float:left;}
.b-content .entry{width:356px;}
<!--# endif -->

